# Py-WEB_HW_5

./: README.md  SocketServer.py  exchange.py  index.html  logs.txt  main.css  main.js  pyproject.toml
